--- a/titmouse2d/titmouse2d.vcxproj.filters
+++ b/titmouse2d/titmouse2d.vcxproj.filters
@@ -168,6 +168,12 @@
     <ClCompile Include="src\Lagrangian\VortexParticleSystemSolver2.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="src\OtherMethod\LBM\LBMData2.h">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="src\demo\LBMTest\LBM_kamavortex.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Vector2.hpp">
@@ -375,6 +381,9 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="src\random.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="src\OtherMethod\LBM\LBMSolver2.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
