--- a/titmouse2d/titmouse2d.vcxproj.filters
+++ b/titmouse2d/titmouse2d.vcxproj.filters
@@ -174,6 +174,9 @@
     <ClCompile Include="src\demo\LBMTest\LBM_kamavortex.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="src\OtherMethod\LBM\LBMSolver2.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Vector2.hpp">
