update LBM method

--- a/titmouse2d/titmouse2d.vcxproj.filters
+++ b/titmouse2d/titmouse2d.vcxproj.filters
@@ -389,5 +389,8 @@
     <ClInclude Include="src\OtherMethod\LBM\LBMSolver2.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="src\OtherMethod\LBM\LBM_TurbulenceModel.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
