--- a/titmouse2d/titmouse2d.vcxproj
+++ b/titmouse2d/titmouse2d.vcxproj
@@ -193,6 +193,7 @@
     <ClCompile Include="src\Numerical\Pde.hpp" />
     <ClCompile Include="src\OtherMethod\LBM\LBMData2.h" />
     <ClCompile Include="src\OtherMethod\LBM\LBMSolver2.cpp" />
+    <ClCompile Include="src\OtherMethod\PBF\PBFSolver2.cpp" />
     <ClCompile Include="src\Size2.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -241,6 +242,7 @@
     <ClInclude Include="src\Lagrangian\NeighborSearcher2.h" />
     <ClInclude Include="src\Lagrangian\ParticleSystemSolver2.h" />
     <ClInclude Include="src\DenseMatrix.hpp" />
+    <ClInclude Include="src\Lagrangian\SphPoly6Kernel2.h" />
     <ClInclude Include="src\Lagrangian\SphSpikyKernel2.h" />
     <ClInclude Include="src\Lagrangian\SphStdKernel2.h" />
     <ClInclude Include="src\Lagrangian\SphSystemData2.h" />
@@ -259,6 +261,8 @@
     <ClInclude Include="src\Matrix.hpp" />
     <ClInclude Include="src\OtherMethod\LBM\LBMSolver2.h" />
     <ClInclude Include="src\OtherMethod\LBM\LBM_TurbulenceModel.h" />
+    <ClInclude Include="src\OtherMethod\PBF\PBFData2.h" />
+    <ClInclude Include="src\OtherMethod\PBF\PBFSolver2.h" />
     <ClInclude Include="src\random.h" />
     <ClInclude Include="src\Size2.h" />
     <ClInclude Include="src\Lagrangian\ParticleSystemData2.h" />
