--- a/titmouse2d/titmouse2d.vcxproj.filters
+++ b/titmouse2d/titmouse2d.vcxproj.filters
@@ -183,6 +183,12 @@
     <ClCompile Include="src\demo\PBF\PBFTest.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="src\demo\IISPHTest\IISPHTest.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="src\OtherMethod\IISPH\IISPHSolver2.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Vector2.hpp">
@@ -417,6 +423,12 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="src\TempMovingCollider2.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="src\OtherMethod\PCISPH\PCISPHSolver2.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="src\OtherMethod\IISPH\IISPHData2.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
