--- a/titmouse2d/titmouse2d.vcxproj.filters
+++ b/titmouse2d/titmouse2d.vcxproj.filters
@@ -201,6 +201,12 @@
     <ClCompile Include="src\OtherMethod\MPM\MPMSolver2.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="src\demo\EulerianSmokeTest\EulerianSmokeTest.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Eulerian\EulerianSmoke\EulerianSmokeSolver2.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Vector2.hpp">
@@ -450,6 +456,12 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="src\OtherMethod\MPM\MPMData2.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Eulerian\EulerianSmoke\EulerianSmokeSolver2.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Eulerian\EulerianSmoke\EulerianSmokeGridData2.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
