--- a/titmouse2d/titmouse2d.vcxproj.filters
+++ b/titmouse2d/titmouse2d.vcxproj.filters
@@ -464,5 +464,8 @@
     <ClInclude Include="src\Eulerian\EulerianSmoke\EulerianSmokeGridData2.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="src\LinearSystem\RelaxedJacobiSolver.hpp">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
